tests/invalid/simple/While_CompileFail_1.whiley
void System::main([string] args):
    int i
    int j=0
    while(j < |args|):
        i = 1
        j = j + 1
    print str(i)
